--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,8 +31,10 @@ jobs:
         with:
           project_id: praveen-345
 
-      - name: Configure Docker for Artifact Registry
-        run: gcloud auth configure-docker asia-south1-docker.pkg.dev
+      - name: Authenticate Docker to Artifact Registry
+        run: |
+         gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://asia-south1-docker.pkg.dev
+
 
       - name: Build and Push Docker Image
         run: |
