--- a/.github/workflows/trigger-cloud-build.yml
+++ b/.github/workflows/trigger-cloud-build.yml
@@ -14,6 +14,9 @@ jobs:
       contents: read
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4  # ✅ This step fetches your code
+
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
