--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,18 +1,32 @@
 steps:
+  # Step 1: Build Docker image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'asia-south1-docker.pkg.dev/praveen-345/argocd-rollout/test-cloud', '.']
+    args: [
+      'build', '-t',
+      'asia-south1-docker.pkg.dev/praveen-345/argocd-rollout/test-cloud',
+      '.'
+    ]
 
+  # Step 2: Push Docker image to Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'asia-south1-docker.pkg.dev/praveen-345/argocd-rollout/test-cloud']
+    args: [
+      'push',
+      'asia-south1-docker.pkg.dev/praveen-345/argocd-rollout/test-cloud'
+    ]
 
+  # Step 3: Deploy the same image to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
     args:
       [
         'run', 'deploy', 'test-cloud',
-        '--image=asia-south1-docker.pkg.dev/praveen-345/argocd-rollout/test-cloud-run',
+        '--image=asia-south1-docker.pkg.dev/praveen-345/argocd-rollout/test-cloud',
         '--region=asia-south1',
         '--platform=managed',
         '--allow-unauthenticated'
       ]
+
+images:
+  - 'asia-south1-docker.pkg.dev/praveen-345/argocd-rollout/test-cloud'
+
 
