--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -28,3 +28,7 @@ steps:
 
 images:
   - 'asia-south1-docker.pkg.dev/praveen-345/argocd-rollout/test-cloud'
+
+  options:
+  logging: CLOUD_LOGGING_ONLY
+
