--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,20 +1,19 @@
 steps:
-  # Step 1: Build the image
   - name: 'gcr.io/cloud-builders/docker'
-    args: [
-      'build', '-t',
-      'asia-south1-docker.pkg.dev/praveen-345/argocd-rollout/test-cloud',
-      '.'
-    ]
+    args:
+      [
+        'build', '-t',
+        'asia-south1-docker.pkg.dev/praveen-345/argocd-rollout/test-cloud',
+        '.'
+      ]
 
-  # Step 2: Push the image
   - name: 'gcr.io/cloud-builders/docker'
-    args: [
-      'push',
-      'asia-south1-docker.pkg.dev/praveen-345/argocd-rollout/test-cloud'
-    ]
+    args:
+      [
+        'push',
+        'asia-south1-docker.pkg.dev/praveen-345/argocd-rollout/test-cloud'
+      ]
 
-  # Step 3: Deploy to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
     args:
@@ -29,6 +28,5 @@ steps:
 images:
   - 'asia-south1-docker.pkg.dev/praveen-345/argocd-rollout/test-cloud'
 
-  options:
+options:
   logging: CLOUD_LOGGING_ONLY
-
